--- a/result/2022-01-05.md
+++ b/result/2022-01-05.md
@@ -40,3 +40,4 @@
 40. [人生特迷惑时刻](https://s.weibo.com//weibo?q=%23%E4%BA%BA%E7%94%9F%E7%89%B9%E8%BF%B7%E6%83%91%E6%97%B6%E5%88%BB%23&Refer=top) 104083
 41. [有个嘴贫的学生有多快乐](https://s.weibo.com//weibo?q=%23%E6%9C%89%E4%B8%AA%E5%98%B4%E8%B4%AB%E7%9A%84%E5%AD%A6%E7%94%9F%E6%9C%89%E5%A4%9A%E5%BF%AB%E4%B9%90%23&Refer=top) 102738
 42. [郑州市民冒雪排队做核酸](https://s.weibo.com//weibo?q=%23%E9%83%91%E5%B7%9E%E5%B8%82%E6%B0%91%E5%86%92%E9%9B%AA%E6%8E%92%E9%98%9F%E5%81%9A%E6%A0%B8%E9%85%B8%23&Refer=top) 61018
+43. [一起向未来多语种版MV](https://s.weibo.com//weibo?q=%23%E4%B8%80%E8%B5%B7%E5%90%91%E6%9C%AA%E6%9D%A5%E5%A4%9A%E8%AF%AD%E7%A7%8D%E7%89%88MV%23&Refer=top) 22119
